# StudyHub

./: .gitignore  README.md  docker-compose.yml  env.example
apps/api/: .dockerignore  API_DOCUMENTATION.md  DATABASE_DOCUMENTATION.md  Dockerfile  PERMISSIONS_DOCUMENTATION.md  README.md  env.example  pyproject.toml
apps/api/classroom/: admin.py  models.py  permissions.py  urls.py
apps/api/classroom/migrations/: 0001_initial.py  0002_rename_trinamento_treinamento_alter_recurso_tipo.py  0003_alter_aluno_options_alter_matricula_options_and_more.py  0004_alter_turma_data_conclusao_alter_turma_link_acesso.py  0005_alter_turma_data_conclusao.py
apps/api/classroom/models/: __init__.py  aluno.py  matricula.py  recurso.py  treinamento.py  turma.py
apps/api/classroom/serializers/: __init__.py  aluno.py  matricula.py  recurso.py  treinamento.py  turma.py
apps/api/classroom/views/: __init__.py  aluno.py  matricula.py  recurso.py  treinamento.py  turma.py
apps/api/core/: settings.py  urls.py
apps/api/core/views/: auth.py
apps/web/: .cta.json  .dockerignore  Dockerfile  biome.json  env.example  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: env.ts  main.tsx  routeTree.gen.ts  styles.css
apps/web/src/api/: aluno.ts  client.ts  matricula.ts  recurso.ts  treinamentos.ts  turmas.ts
apps/web/src/api/admin/: get-is-admin.ts
apps/web/src/components/: admin-sidebar.tsx  data-table.tsx  not-found.tsx
apps/web/src/data/: mock.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/utils/: format-date.ts
(+13 files in other folders)
